﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-22 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/setup.php: bug #1536112, better fix (in case of 
      register_globals enabled), thanks to Michal
    ### 2.8.2.3 released from MAINT_2_8_2
    * scripts/setup.php: bug #1544692, version 2.8.2.3 breaks setup.php
      on a server with register_globals enabled, thanks to Juergen Windkiel
    ### 2.8.2.4 released from MAINT_2_8_2

2006-08-21 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, libraries/auth/cookie.auth.lib.php:
      bug #1542875, Cookie auth on IIS

2006-08-20 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.

2006-08-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/pdf.php: do not display BLOBs on PDF export
    * lang/brazilian-portuguese: update, thanks to thedarkness
    * lang/catalan update, thanks to Xavier Navarro (xavin)

2006-08-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: sorting on column header

2006-08-16 Michal Čihař  <michal@cihar.com>
    * libraries/export/htmlexcel.php: Fix charset header of exported HTML/XLS
      file (bug #1541100).

2006-08-15 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * lang/german: Updated

2006-08-14 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Improve readibility (patch #1539976), thanks to Isaac
      Bennetch - ibennetch.
    * lang/czech: Updated.

2006-08-14 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php: more complete check before showing
      Relation View
    ### 2.8.2.2 released from MAINT_2_8_2

2006-08-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: bug #1519799, imagelink error
    * tbl_select.php: feature #1520222, calendar in Search

2006-08-12 Marc Delisle  <lem9@users.sourceforge.net>