@@ -68,10 +68,13 @@ $cfg['Servers'][$i]['controlpass']   = '';          // access to the "mysql/user
                                                     // The controluser is also
                                                     // used for all relational
                                                     // features (pmadb)
-$cfg['Servers'][$i]['auth_type']     = 'config';    // Authentication method (config, http or cookie based)?
+$cfg['Servers'][$i]['auth_type']     = 'config';    // Authentication method (config, http, signon or cookie based)?
 $cfg['Servers'][$i]['user']          = 'root';      // MySQL user
 $cfg['Servers'][$i]['password']      = '';          // MySQL password (only needed
                                                     // with 'config' auth_type)
+$cfg['Servers'][$i]['SignonSession'] = '';          // Session to use for 'signon' auth method
+$cfg['Servers'][$i]['SignonURL']     = '';          // URL where to redirect user to login for 'signon' auth method
+$cfg['Servers'][$i]['LogoutURL']     = '';          // URL where to redirect user after logout
 $cfg['Servers'][$i]['nopassword']    = FALSE;       // Whether to try to connect without password
 $cfg['Servers'][$i]['only_db']       = '';          // If set to a db-name, only
                                                     // this db is displayed in left frame
